--- a/frontend/public/.htaccess
+++ b/frontend/public/.htaccess
@@ -44,6 +44,6 @@ RewriteRule . /index.html [L]
 
 # Security headers
 Header always set X-Content-Type-Options "nosniff"
-Header always set X-Frame-Options "SAMEORIGIN"
+Header always set X-Frame-Options "ALLOWALL"
 Header always set X-XSS-Protection "1; mode=block"
 Header always set Referrer-Policy "strict-origin-when-cross-origin"
