--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/model-viewer": "^4.1.0",
-    "@types/three": "^0.177.0",
     "ethers": "^6.14.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "three": "^0.177.0"
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
